feat: add notice for jdk9 and higher version